--- a/test/complicated-snippet.xhtml
+++ b/test/complicated-snippet.xhtml
@@ -12,4 +12,8 @@
 		<td class="MyTD" style="border:1px solid black">#AAD034</td>
 		<td class="MyTD" style="background-color:blue"> <span style="background-color:maroon">©</span> </td>
 	</tr>
+	<tr>
+		<td class="MyTD" style="border:1px solid black">#F00BA5</td>
+		<td class="MyTD" style="background-color:cyan">foo&amp;bar</td>
+	</tr>
 </table>
